# ofxGgmlVideo

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HERMES.md  README.md  addon_config.mk  ofxggml-addon.json
.github/: copilot-instructions.md
.github/instructions/: ofxggml-ecosystem.instructions.md
docs/: ARCHITECTURE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_POLICY.md  ROADMAP.md  VIDEO_WORKFLOWS.md
docs/releases/: v1.0.1.md
ofxGgmlVideoFrameExample/: README.md  addons.make
ofxGgmlVideoFrameExample/src/: ofApp.cpp  ofApp.h
scripts/: doctor-video.bat  doctor-video.ps1  doctor-video.sh  release-candidate.ps1  run-video-runtime-smoke.bat  run-video-runtime-smoke.ps1  run-video-runtime-smoke.sh  test-addon.ps1  test-doctor-video.ps1  test-video-runtime-smoke.ps1  validate-local.ps1
src/: ofxGgmlVideo.h  ofxGgmlVideoVersion.h
src/ofxGgmlVideo/: ofxGgmlVideoTypes.h  ofxGgmlVideoUtils.cpp  ofxGgmlVideoUtils.h
tests/: CMakeLists.txt  test_main.cpp
