cmake_minimum_required(VERSION 3.18)
project(ofxGgmlVideo_tests CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(ofxGgmlVideo_tests
	test_main.cpp
	../src/ofxGgmlVideo/ofxGgmlVideoUtils.cpp)

target_include_directories(ofxGgmlVideo_tests PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/../src)

enable_testing()
add_test(NAME ofxGgmlVideo_tests COMMAND ofxGgmlVideo_tests)